# GB-Golf-Optimizer

./: .env.example  .gitignore  contest_config.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: mirror.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md
.planning/phases/01-data-foundation/: 01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-optimization-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-web-application-and-deployment/: 03-02-SUMMARY.md
.planning/phases/04-constraint-foundation/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-serialization-and-re-optimize-route/: 05-02-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
deploy/: DEPLOY.md  deploy.sh  gameblazers.silverreyes.net.nginx  gbgolf.service
gbgolf/: db.py  fetcher.py
gbgolf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gbgolf/data/: __init__.py  config.py  filters.py
gbgolf/optimizer/: __init__.py  constraints.py  engine.py
gbgolf/web/: __init__.py  routes.py
gbgolf/web/static/: style.css
tests/: conftest.py  test_config.py  test_constraints.py  test_db.py  test_fetcher.py  test_filters.py  test_matching.py  test_optimizer.py  test_pipeline.py  test_projections.py  test_roster.py  test_web.py
(+68 files in other folders)
