[project]
name = "gbgolf"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "python-dateutil>=2.9",
    "pulp>=3.3.0",
    "flask>=3.0",
    "gunicorn>=20.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.1",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "flask>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gbgolf*"]
